fixed horizontal scroll.

--- a/stylesheets/style.less
+++ b/stylesheets/style.less
@@ -59,6 +59,7 @@ h6 {
 	padding: 0;
 
 	overflow-y: scroll;
+	overflow-x: hidden;
 	height: 100vh;
 }
 
@@ -105,6 +106,10 @@ h6 {
 
 		text {
 			fill: @primary;
+
+			&::selection {
+				color: @primary;
+			}
 		}
 
 		&:hover {
@@ -114,6 +119,10 @@ h6 {
 			}
 			text {
 				fill: white;
+
+				&::selection {
+					color: white;
+				}
 			}
 		}
 	}
